furo.serviceの自動起動設定追加

--- a/gee4-bath-server.yaml
+++ b/gee4-bath-server.yaml
@@ -59,5 +59,6 @@
   - name: Start furo.service
     systemd:
       state: started
+      enabled: yes
       name: furo.service
       daemon_reload: yes
